# Web-Scraper

./: .cache  .env.example  .gitignore  README.md  SQL_database.py  estimate_capacity.py  indieonthemove_scraper.py  indieonthemove_with_capacity.csv  initial_database.csv  main.py  pyproject.toml  requirements.txt  test_spotify.py  thisweek_scraper.py  thisweek_to_scraper.py  toronto_indie_venues_clean.csv  toronto_restaurant_leads.csv  yellow_pages_scraper.py
.claude/: settings.local.json
data/: artist_enriched.csv  awksion.db  awksion_handoff.xlsx  indieonthemove_venues.csv  indieonthemove_with_capacity.csv  spotify_venue_validation.csv  yellow_pages_music_leads.csv
docs/: data_dictionary.md  enricher_overview.md  scrapers_overview.md
enrichers/: .cache  spotify_enricher.py
scrapers/: estimate_capacity.py  indieonthemove_scraper.py  thisweek_to_scraper.py  yellow_pages_scraper.py
src/awksion/: __init__.py  __main__.py  cli.py  config.py
src/awksion/db/: __init__.py  models.py  session.py
src/awksion/enrichers/: artist_tiers.py  spotify_followers.py  ticketing_filter.py  website_regex.py
src/awksion/exporters/: to_xlsx.py
src/awksion/pipelines/: build_db1.py  build_db2.py  migrate_csvs.py
src/awksion/scrapers/: lastfm_geo.py  osm_venues.py
