[project]
name = "webscraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "requests>=2.32.5",
    "selenium>=4.41.0",
    "setuptools>=82.0.1",
    "undetected-chromedriver>=3.5.5",
    "webdriver-manager>=4.0.2",
]
