[project]
name = "webscraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "geopandas>=1.1.3",
    "geopy>=2.4.1",
    "osmnx>=2.1.0",
    "pyproj>=3.7.2",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "selenium>=4.41.0",
    "setuptools>=82.0.1",
    "shapely>=2.1.2",
    "tqdm>=4.67.3",
    "undetected-chromedriver>=3.5.5",
    "webdriver-manager>=4.0.2",
]
